Draft refactoring of ScanForUnusedIl8nKeys test. It became faster (up to 10-times). All language bundle files use UTF-8, because Java is >9. Removed timestamp from cleaned.properties and unused.properties.